urgent minor fixes - corrected overflow-x, scrollTrigger animation disabled in features and temporarily fixed fonts

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -7,7 +7,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
 * {
   font-family: "Varela Round", "Montserrat", sans-serif !important;
@@ -142,6 +142,7 @@ html {
   position: relative;
   z-index: 10;
   background-color: #000000;
+  overflow-x: hidden;
 }
 
 #footer {
@@ -151,8 +152,8 @@ html {
 }
 
 #footer h1 {
-    font-family: 'Montserrat' !important;
-    font-weight: bolder;
+  font-family: "Montserrat", "Varela Round", "Montserrat", sans-serif !important;
+  font-weight: bolder;
 }
 
 #loader {
@@ -164,7 +165,7 @@ html {
 }
 
 #loader .text {
-  font-family: 'Montserrat' !important;
+  font-family: "Montserrat", "Varela Round", "Montserrat", sans-serif !important;
   font-weight: bolder;
 }
 
